--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
           </div>
 
           <nav>
-            <a href="https://www.dropbox.com/sh/vdm97z8bh207o0q/AADm_sBpPJlNZrDWMTIDArL7a?dl=0">Dropbox</a>
+            <a href="https://www.dropbox.com/sh/vdm97z8bh207o0q/AADm_sBpPJlNZrDWMTIDArL7a?dl=0" target="_blank">Dropbox</a>
             <a href="{{ site.baseurl }}/about">Sobre</a>
           </nav>
         </header>
