--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,15 +2,15 @@
 layout: default
 ---
 
-<article class="post">
+<article class="post">  
   <h1>{{ page.title }}</h1>
-
+  
+  <div class="date">
+    {% include date_post.html %}
+  </div>
+  
   <div class="entry">
     {{ content }}
-  </div>
-
-  <div class="date">
-    Escrito em {% include date_post.html %}
   </div>
 
   {% include disqus.html %}
