--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
-
+    
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
 
@@ -28,10 +28,22 @@
             <p class="site-description">{{ site.description }}</p>
           </div>
 
-          <nav>
-            <a href="https://www.dropbox.com/sh/vdm97z8bh207o0q/AADm_sBpPJlNZrDWMTIDArL7a?dl=0" target="_blank">Dropbox</a>
-            <a href="{{ site.baseurl }}/about">Sobre</a>
+            <nav id="navigation" class="site-navigation" role="navigation">
+            <ul class="menu">
+              <li class="menu-item"><a href="https://www.dropbox.com/sh/vdm97z8bh207o0q/AADm_sBpPJlNZrDWMTIDArL7a?dl=0" target="_blank">Dropbox</a></li>
+              <li class="menu-item"><a href="#">Categorias</a>
+                <ul class="dropdown">
+                  <li class="menu-item sub-menu"><a href="#">SubMenu A</a></li>
+                  <li class="menu-item sub-menu"><a href="#">SubMenu B</a></li>
+                  <li class="menu-item sub-menu"><a href="#">SubMenu C</a></li>
+                  <li class="menu-item sub-menu"><a href="#">SubMenu D</a></li>
+                  <li class="menu-item sub-menu"><a href="#">SubMenu E</a></li>
+                </ul>
+              </li>
+              <li class="menu-item"><a href="{{ site.baseurl }}/about">Sobre</a></li>
+            </ul>
           </nav>
+
         </header>
       </div>
     </div>
