menu "Categorias" alterado

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,17 +30,12 @@
 
             <nav id="navigation" class="site-navigation" role="navigation">
             <ul class="menu">
-              <li class="menu-item"><a href="https://www.dropbox.com/sh/vdm97z8bh207o0q/AADm_sBpPJlNZrDWMTIDArL7a?dl=0" target="_blank">Dropbox</a></li>
+              <li class="menu-item"><a href="{{ site.baseurl }}/about">Sobre</a></li>
               <li class="menu-item"><a href="#">Categorias</a>
                 <ul class="dropdown">
-                  <li class="menu-item sub-menu"><a href="#">SubMenu A</a></li>
-                  <li class="menu-item sub-menu"><a href="#">SubMenu B</a></li>
-                  <li class="menu-item sub-menu"><a href="#">SubMenu C</a></li>
-                  <li class="menu-item sub-menu"><a href="#">SubMenu D</a></li>
-                  <li class="menu-item sub-menu"><a href="#">SubMenu E</a></li>
+                  <li class="menu-item sub-menu"><a href="#">Notícias</a></li>
                 </ul>
               </li>
-              <li class="menu-item"><a href="{{ site.baseurl }}/about">Sobre</a></li>
             </ul>
           </nav>
 
