Menu consertado (provisoriamente)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,9 +31,9 @@
             <nav id="navigation" class="site-navigation" role="navigation">
             <ul class="menu">
               <li class="menu-item"><a href="{{ site.baseurl }}/about">Sobre</a></li>
-              <li class="menu-item"><a href="#">Categorias</a>
+              <li class="menu-item"><a href="{{ site.baseurl }}/categories">Categorias</a>
                 <ul class="dropdown">
-                  <li class="menu-item sub-menu"><a href="#">Notícias</a></li>
+                  <li class="menu-item sub-menu"><a href="{{ site.baseurl }}/categories/#noticias">Notícias</a></li>
                 </ul>
               </li>
             </ul>
