Cor dos links: da água pro vinho *BA DUM TSS*

--- a/style.scss
+++ b/style.scss
@@ -74,11 +74,11 @@ p {
 }
 
 a {
-  color: $blue;
+  color: $wine;
   text-decoration: none;
 	cursor: pointer;
   &:hover, &:active {
-    color: $blue;
+    color: $wine;
   }
 }
 
