Adicionado header com informações

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,9 +39,21 @@
               </li>
             </ul>
           </nav>
-
         </header>
       </div>
+
+      <div class="nav-info site-navigation">
+        <p style="text-align: center; ">Treinos presenciais: segundas 17:30 às 18:45, LCI 07;</p>
+      </div>
+      <div class="nav-info site-navigation">
+        <ul class="menu">
+          <p style="float: left; ">Listas de exercícios: </p>
+          <li class="menu-item"><a href="#">Iniciante</a></li>
+          <li class="menu-item"><a href="#">Intermediário</a></li>
+          <li class="menu-item"><a href="#">Veterano</a></li>
+        </ul>
+      </div>
+
     </div>
 
     <div id="main" role="main" class="container">
