--- a/style.scss
+++ b/style.scss
@@ -269,6 +269,27 @@ img {
   visibility: visible;
 }
 
+.nav-info {
+  margin: 0px;
+  background-color: #313131;
+  width: 100%;
+  display: flex;
+}
+.nav-info .menu {
+  text-align: center;
+  margin: auto;
+}
+.nav-info p {
+  color: white;
+  padding: 10px;
+  margin: auto;
+}
+.nav-info .menu .menu-item{
+  padding: 10px;
+}
+.nav-info a:hover {
+  text-shadow: 0px 0px 10px white;
+}
 
 nav {
   float: right;
