Listas de exercícios e horário adicionados

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,14 +43,13 @@
       </div>
 
       <div class="nav-info site-navigation">
-        <p style="text-align: center; ">Treinos presenciais: segundas 17:30 às 18:45, LCI 07;</p>
+        <p style="text-align: center; ">Oficinas: Segunda-feira, 17:30 - 18:45, no LCI</p>
       </div>
       <div class="nav-info site-navigation">
         <ul class="menu">
-          <p style="float: left; ">Listas de exercícios: </p>
-          <li class="menu-item"><a href="#">Iniciante</a></li>
-          <li class="menu-item"><a href="#">Intermediário</a></li>
-          <li class="menu-item"><a href="#">Veterano</a></li>
+          <p style="float: left; ">Lista de Problemas: </p>
+          <li class="menu-item"><a href="https://goo.gl/T02P2Y">Bixos</a></li>
+          <li class="menu-item"><a href="https://uhunt.onlinejudge.org/vcontest/1a1b9e9f39b533b76d953fd5ffe56f02">Veteranos</a></li>
         </ul>
       </div>
 
