Posts com alinhamento justificado

--- a/style.scss
+++ b/style.scss
@@ -325,6 +325,10 @@ nav {
 // .main
 //
 
+article p {
+  text-align: justify;
+}
+
 .posts > .post {
   padding-bottom: 2em;
   border-bottom: 1px solid $lightGray;
