--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
       </div>
 
       <div class="nav-info site-navigation">
-        <p style="text-align: center; ">Oficinas: Segunda-feira, 17:30 - 18:45, no LCI</p>
+        <p style="text-align: center; ">Oficinas: Segunda e Quarta, 17:30 - 18:45, no LCI</p>
       </div>
       <div class="nav-info site-navigation">
         <ul class="menu">
