--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
         <ul class="menu">
           <p style="float: left; ">Lista de Problemas: </p>
           <li class="menu-item"><a href="https://goo.gl/T02P2Y">Bixos</a></li>
-          <li class="menu-item"><a href="https://uhunt.onlinejudge.org/vcontest/1a1b9e9f39b533b76d953fd5ffe56f02">Veteranos</a></li>
+          <li class="menu-item"><a href="https://goo.gl/uizeCQ">Veteranos</a></li>
         </ul>
       </div>
 
