--- a/style.scss
+++ b/style.scss
@@ -256,6 +256,7 @@ img {
   position: absolute;
   padding: 10px;
   width: 140px;
+  box-shadow: 3px 3px 10px -2px rgba(0, 0, 0, 0.75);
 }
 .site-navigation ul li ul li {
   float: inherit;
