--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,8 @@
 
             <nav id="navigation" class="site-navigation" role="navigation">
             <ul class="menu">
+              <li class="menu-item"><a href="https://www.dropbox.com/sh/vdm97z8bh207o0q/AADm_sBpPJlNZrDWMTIDArL7a?dl=0" target="_blank">Dropbox</a></li>
               <li class="menu-item"><a href="{{ site.baseurl }}/about">Sobre</a></li>
-              <li class="menu-item"><a href="https://github.com/maratonaupf" target="_blank">GitHub</a></li>
               <li class="menu-item"><a href="{{ site.baseurl }}/categories">Categorias</a>
                 <ul class="dropdown">
                   <li class="menu-item sub-menu"><a href="{{ site.baseurl }}/categories/#noticias">Notícias</a></li>
