Adicionado "2017/2" à mensagem sobre as oficinas

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
       </div>
 
       <div class="nav-info site-navigation">
-        <p style="text-align: center; ">Oficinas: Horário a definir</p>
+        <p style="text-align: center; ">Oficinas 2017/2: Horário a definir</p>
       </div>
       <div class="nav-info site-navigation">
         <ul class="menu">
