--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
       </div>
 
       <div class="nav-info site-navigation">
-        <p style="text-align: center; ">Oficinas 2017/2: Horário a definir</p>
+        <p style="text-align: center; ">Treinos: Segunda e Quinta, 17:30–19:00, no LCI</p>
       </div>
       <div class="nav-info site-navigation">
         <ul class="menu">
