Horários e links de treino atualizados

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,13 +43,13 @@
       </div>
 
       <div class="nav-info site-navigation">
-        <p style="text-align: center; ">Treinos: Horário a definir</p>
+        <p style="text-align: center; ">Treinos: Seg. e Qua., 17:40 às 18:40, no LCI 01</p>
       </div>
       <div class="nav-info site-navigation">
         <ul class="menu">
           <p style="float: left; ">Lista de Problemas: </p>
-          <li class="menu-item"><a href="https://goo.gl/T02P2Y">Bixos</a></li>
-          <li class="menu-item"><a href="https://goo.gl/uizeCQ">Veteranos</a></li>
+          <li class="menu-item"><a href="https://www.codepit.io/#/contest/59d24e8e0542c1001db25495/view">Bixos</a></li>
+          <li class="menu-item"><a href="https://www.codepit.io/#/contest/59d250d9514b8c001d7b148b/edit">Veteranos</a></li>
         </ul>
       </div>
 
