--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
       <div class="nav-info site-navigation">
         <ul class="menu">
           <p style="float: left; ">Lista de Problemas: </p>
-          <li class="menu-item"><a href="https://www.codepit.io/#/contest/59d24e8e0542c1001db25495/view">Bixos</a></li>
+          <li class="menu-item"><a href="https://www.codepit.io/#/contest/59d24e8e0542c1001db25495/view">Novatos</a></li>
           <li class="menu-item"><a href="https://www.codepit.io/#/contest/59d250d9514b8c001d7b148b/view">Veteranos</a></li>
         </ul>
       </div>
