--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,14 +43,7 @@
       </div>
 
       <div class="nav-info site-navigation">
-        <p style="text-align: center; ">Treinos: Seg. e Qua., 17:40 às 18:40, no LCI 01</p>
-      </div>
-      <div class="nav-info site-navigation">
-        <ul class="menu">
-          <p style="float: left; ">Lista de Problemas: </p>
-          <li class="menu-item"><a href="https://www.codepit.io/#/contest/59d24e8e0542c1001db25495/view">Novatos</a></li>
-          <li class="menu-item"><a href="https://www.codepit.io/#/contest/59d250d9514b8c001d7b148b/view">Veteranos</a></li>
-        </ul>
+        <p style="text-align: center; ">Treinos 2018: Em breve!</p>
       </div>
 
     </div>
