Horários do Clube 2018 atualizados

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,10 @@
       </div>
 
       <div class="nav-info site-navigation">
-        <p style="text-align: center; ">Treinos 2018: Em breve!</p>
+        <p style="text-align: center; ">Treinos: Terça, 18:00-19:00, LCI 01</p>
+      </div>
+      <div class="nav-info site-navigation">
+        <p style="text-align: center; ">Quinta, 19:00-22:00, sala a definir</p>
       </div>
 
     </div>
